# cs240h_final_project

./: README.md  snap-haskell.cabal
.stack-work/install/x86_64-osx/lts-4.1/7.10.3/flag-cache/: hspec-2.2.1-ba6887364be711a2be52a3f5bfcd91c9  hspec-core-2.2.1-8d945bbbc6d23cb0d7b3c209f0c2116c  hspec-discover-2.2.1-8aa4073730c676dbe210ea8bffd8d092  hspec-expectations-0.7.2-56a244fc2755fa87163ff9606bc7ad97  parsec-3.1.9-d86a9089efd299486d469c7b09bda40b  quickcheck-io-0.1.2-1447b51fe5471f5c58d50acdcfa351dc  setenv-0.1.1.3-4d70f2e61b1bd0645017164a0ca26ee9  snap-haskell-0.1.0.0-0937e72106141b92d89541ab12033a9a  snap-haskell-0.1.0.0-0ea262f3b697b872639418ad4372a82d  snap-haskell-0.1.0.0-5d27cd582762db074755b50ff47a9e86  snap-haskell-0.1.0.0-962673f5c8f53dd6aec47a9a5550870b
.stack-work/install/x86_64-osx/lts-4.1/7.10.3/lib/x86_64-osx-ghc-7.10.3/snap-haskell-0.1.0.0-8OawOVl0fdeIAbLPtUJM1P/: libHSsnap-haskell-0.1.0.0-8OawOVl0fdeIAbLPtUJM1P-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-4.1/7.10.3/lib/x86_64-osx-ghc-7.10.3/snap-haskell-0.1.0.0-CaESLM06jMXATet55QTR5B/: TNGraph.dyn_hi  TNGraph.hi  TNParser.dyn_hi  TNParser.hi  TNPrimitiveFunctions.dyn_hi  TNPrimitiveFunctions.hi  TNTypes.dyn_hi  TNTypes.hi  libHSsnap-haskell-0.1.0.0-CaESLM06jMXATet55QTR5B-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-4.1/7.10.3/lib/x86_64-osx-ghc-7.10.3/snap-haskell-0.1.0.0-KVlJZN2n0GyDepAKZO4DOv/: TNGraph.dyn_hi  TNGraph.hi  TNParser.dyn_hi  TNParser.hi  TNTypes.dyn_hi  (+4 more)
.stack-work/install/x86_64-osx/lts-4.1/7.10.3/pkgdb/: package.cache  snap-haskell-0.1.0.0-58808233f2f751e69b82177882154339.conf
app/: Main.hs
examples/: bob_marley.txt  bob_marley_orig.txt  huge_picture.txt  smallNetwork.txt  stanford.txt  test_picture.txt  whole_z.txt  z_bottom.txt
src/: GibbsSampler.hs  TNGraph.hs  TNParser.hs  TNPrimitiveFunctions.hs  TNTypes.hs  myfile
test/: Spec.hs  TestParser.hs
(+5 files in other folders)
