name:                snap-haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/snap-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Abraham Starosta
maintainer:          example@example.com
copyright:           unknown
category:            unknown
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TNGraph, TNParser, TNPrimitiveFunctions, TNTypes, GibbsSampler
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , array
                     , bytestring
                     , random
  default-language:    Haskell2010

executable snap-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , snap-haskell
                     , containers
                     , parsec
                     , array
                     , bytestring
                     , random
  default-language:    Haskell2010

test-suite snap-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snap-haskell
                     , hspec
                     , QuickCheck
                     , containers
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/snap-haskell
